--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -117,6 +117,16 @@ span {
     text-align: left;
 }
 
+/* remove the spinner */
+.input-no-spinner::-webkit-outer-spin-button, .input-no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.bf-table-submit {
+    font-size: 18px;
+}
+
 /* 
 Max width before this PARTICULAR table gets nasty
 This query will take effect for any screen smaller than 760px
@@ -254,16 +264,7 @@ only screen and (min-device-width: 360px) and (max-device-width: 640px)  {
 	
 
 
-/* remove the spinner */
-.input-no-spinner::-webkit-outer-spin-button, .input-no-spinner::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
 
-.bf-table-submit {
-    font-size: 18px;
-}
-// ----------------------------
 
 
 
@@ -395,7 +396,7 @@ only screen and (min-device-width: 320px) and (max-device-width: 568px)  {
 
 
 @media 
-only screen and (min-device-width: 768px) and (max-device-width: 1024px)  {
+only screen and (min-device-width: 768px) and (max-device-width: 1055px)  {
 
 
 	/* Force table to not be like tables anymore */
@@ -741,6 +742,135 @@ only screen and (min-device-width: 600px) and (max-device-width: 960px)  {
 
 .bf-table-away {
     max-width: 160px;
+    //max-width: 188px; 
+    text-align: center;
+    height: auto;
+    font-size: 16px;
+}
+
+.bf-table-group {
+    visibility: hidden
+    width: auto; 
+    text-align:center;
+    height: auto;
+}
+
+.bf-table-user {
+    width: auto; 
+    text-align: center;
+    height: auto;
+}
+
+.bf-table-score {
+    text-align:center;
+}
+
+.bf-table-score input {
+    width: 40%;
+    height: 57px;
+    text-align: center;
+}
+
+.bf-table-points {
+    width: auto; 
+    text-align: center;
+    height: auto;
+        }
+    }
+}
+
+
+@media 
+only screen and (min-device-width: 554px) and (max-device-width: 600px)  {
+
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+	display: table-cell-block;
+        
+        width: 100%; 
+        .bf-table {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 20px;
+}
+
+
+.bf-table-row {
+    max-width: 523px;
+}
+
+.bf-table h1 {
+    font-weight: 600;
+    color: @color-blue; 
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.bf-table tbody > tr > td {
+    height: auto;
+    vertical-align: middle;
+}
+
+#testcolumn {
+    min-width: 115px;
+    min-height: 64px;
+    display: inline-flex-center;
+}
+
+#testscore {
+    min-width: 115px;
+    min-height: 64px;
+    display: inline-flex-center;
+}
+
+.bf-table-selector {
+    padding-bottom: 100px;
+}
+
+.bf-center {
+    text-align:center;
+}
+
+.bf-right {
+    text-align:right;
+}
+
+.bf-left {
+    text-align:left;
+}
+
+// Table style for Predictions
+
+.bf-table-date {
+    width: auto; 
+    text-align:center;
+    height: auto;
+}
+
+.bf-table-home {
+    max-width: 150px; 
+    //max-width: 188px;
+    text-align: center;
+    height: auto;
+    font-size: 16px;
+}
+
+.bf-table-vs {
+    width: 100%;
+    text-align: center;
+}
+
+.bf-table-vs img {
+    height: 57px; 
+    max-width: 32%;
+   // min-width: 30px;
+   // max-width: 40px;
+    padding-left:5px; 
+    padding-right: 5px;
+}
+
+.bf-table-away {
+    max-width: 150px;
     //max-width: 188px; 
     text-align: center;
     height: auto;
