--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -43,7 +43,8 @@
                     <!--div id="sparkline1" class="small-chart m-t-sm"></div-->
                     {{/if}}
                 </div>
-                
+                <br>
+                {{{getTicker}}}
             </div>
             {{/if}}
             
