--- a/client/templates/views/fixtures/fixtures.html
+++ b/client/templates/views/fixtures/fixtures.html
@@ -13,7 +13,12 @@
 								<div class="fc-toolbar">
 									<div class="fc-left">
 										<h1>Mängu ennustused</h1>
-									</div>   
+									</div>
+									<div class="fc-right">
+										<div class="group-select fc-button-group">
+											<button id="calendar-back" type="submit" class="btn btn-success bf-table-submit"><i class="fa fa-arrow-left" aria-hidden="true"></i> Tagasi</button>
+										</div>
+									</div>			   
 								</div>
 							</div>
                             
