Rules payout info updated

--- a/client/templates/views/rules/rules.html
+++ b/client/templates/views/rules/rules.html
@@ -121,8 +121,36 @@
                                                 </ul>
                                             </li>
                                             <li>
-                                                Lisaks lõplikule paremusjärjestusele on võimalik saada ka "eripreemia" järgnevate voorude võitude eest: I, II, III ning (IV - VII summa). Lahti selgitades tähendab see seda, et selgitame eraldi välja iga alagrupivooru ning ka finaalmängude parima ennustaja.  
+                                                Lisaks lõplikule paremusjärjestusele on võimalik saada ka "eripreemia" järgnevate voorude võitude eest: I, II, III ning (IV - VII summa). Lahti seletades tähendab see seda, et selgitame eraldi välja iga alagrupivooru ning ka finaalmängude parima ennustaja, kellest igaüks saab enda sisseostu tagasi (üks mängija võib saada ka mitu võitu). 
                                             </li>
+                                            <li>
+                                                Peale eripreemiate mahaarvestamist toimub ülejäänud auhinnafondi jagamine järgnevalt:
+                                            </li>
+                                            <br>
+                                            <ul>
+                                                <table class="bf-rules-table">
+                                                    <tr>
+                                                        <th>Koht</th>
+                                                        <th>Auhind</th>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>I</td>
+                                                        <td>50%</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>II</td>
+                                                        <td>25%</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>III</td>
+                                                        <td>15%</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>IV</td>
+                                                        <td>10%</td>
+                                                    </tr>
+                                                </table>
+                                            </ul>
                                         </ul>
                                     </div>
                                 </div>
