--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -127,6 +127,18 @@ span {
     font-size: 18px;
 }
 
+.bf-rules-table {
+    border-collapse: collapse;
+}
+
+.bf-rules-table th,
+.bf-rules-table td, {
+    border: 1px solid;
+    text-align: center;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
 /* 
 Max width before this PARTICULAR table gets nasty
 This query will take effect for any screen smaller than 760px
