Position calculation and display

--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -36,7 +36,7 @@
                     {{#if isInRole 'registered-user'}}
                     <div>
                         <h4 class="font-extra-bold m-b-xs">
-                            {{userPoints.total}} punkti
+                            {{userPoints.position}}. koht ({{userPoints.total}}p)
                         </h4>
                         <!--small class="text-muted">Sinu viimaste ennustuste graafik</small-->
                     </div>
