--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -9,7 +9,7 @@
 
                 <div class="stats-label text-color">
                     <span class="font-extra-bold font-uppercase">{{currentUser.profile.name}}</span>
-
+                    
                     <div class="dropdown">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown">
                             {{#if isInRole 'registered-user'}}
@@ -32,16 +32,14 @@
                             <li><a href="{{pathFor route='logout'}}">Logi välja</a></li>
                         </ul>
                     </div>
-
                     {{#if isInRole 'registered-user'}}
                     <div>
                         <h4 class="font-extra-bold m-b-xs">
                             {{userPoints.position}}. koht ({{userPoints.total}}p)
                         </h4>
-                        <!--small class="text-muted">Sinu viimaste ennustuste graafik</small-->
                     </div>
-                    <!--div id="sparkline1" class="small-chart m-t-sm"></div-->
                     {{/if}}
+                    <div id="sparkline1" class="small-chart m-t-sm"></div>
                 </div>
                 <br>
                 {{{getTicker}}}
