Last points fixed, commented out

--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -35,11 +35,12 @@
                     {{#if isInRole 'registered-user'}}
                     <div>
                         <h4 class="font-extra-bold m-b-xs">
-                            {{userPoints.position}}. koht ({{userPoints.total}}p)
+                            <span class="color-blue">{{userPoints.position}}. koht</span> ({{userPoints.total}}p)
                         </h4>
+                        <!--small class="text-muted">Sinu viimased ennustused</small>
+                        <div id="sparkline1" class="small-chart m-t-sm"></div-->
                     </div>
                     {{/if}}
-                    <div id="sparkline1" class="small-chart m-t-sm"></div>
                 </div>
                 <br>
                 {{{getTicker}}}
