--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -7,6 +7,9 @@ span {
     text-align: center;
 }
 
+.color-blue {
+    color: @color-blue;
+}
 .bf-table h1 {
     font-weight: 600;
     color: @color-blue; 
@@ -248,7 +251,7 @@ only screen and (min-device-width: 360px) and (max-device-width: 640px)  {
 }
 
 .bf-table-group {
-    visibility: hidden
+    visibility: hidden;
     width: auto; 
     text-align:center;
     height: auto;
@@ -637,7 +640,7 @@ only screen and (min-device-width: 450px) and (max-device-width: 600px)  {
 }
 
 .bf-table-group {
-    visibility: hidden
+    visibility: hidden;
     width: auto; 
     text-align:center;
     height: auto;
@@ -765,7 +768,7 @@ only screen and (min-device-width: 600px) and (max-device-width: 960px)  {
 }
 
 .bf-table-group {
-    visibility: hidden
+    visibility: hidden;
     width: auto; 
     text-align:center;
     height: auto;
