--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -37,8 +37,8 @@
                         <h4 class="font-extra-bold m-b-xs">
                             <span class="color-blue">{{userPoints.position}}. koht</span> ({{userPoints.total}}p)
                         </h4>
-                        <small class="text-muted">Sinu viimased ennustused</small>
-                        <div id="sparkline1" class="small-chart m-t-sm"></div>
+                        <!--small class="text-muted">Sinu viimased ennustused</small>
+                        <div id="sparkline1" class="small-chart m-t-sm"></div-->
                     </div>
                     {{/if}}
                 </div>
