--- a/client/templates/views/predictions/predictions-table.html
+++ b/client/templates/views/predictions/predictions-table.html
@@ -7,7 +7,7 @@
                     <th data-class="bf-table-home" data-sort-ignore="true" data-hide="phone" class="bf-center">Kodu</th>
                     <th data-class="bf-table-vs" data-sort-ignore="true" class="bf-center"></th>
                     <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone" class="bf-center">Võõrsil</th>
-                    <th data-class="bf-table-group" data-hide="phone, tablet" data-ignore="true" class="bf-center">Grupp</th>
+                    <!--th data-class="bf-table-group" data-hide="phone, tablet" data-ignore="true" class="bf-center">Grupp</th-->
                     <th data-class="bf-table-round" data-hide="phone, tablet" class="bf-center">Voor</th>
                     <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Tulemus</th>
                 </tr>
@@ -18,7 +18,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <!--td></td-->
                     <td></td>
                     <td align="middle">
                         <button id="pred-submit" type="submit" class="btn btn-success bf-table-submit">Salvesta</button>
@@ -39,7 +39,7 @@
                     </div>
                     </td>
                     <td class="bf-table-away">{{fixture.away_team.name}}</td>
-                    <td class="bf-table-group">{{fixture.group}}</td>
+                    <!--td class="bf-table-group">{{fixture.group}}</td-->
                     <td class="bf-table-group">{{fixture.round}}</td>
                     <td class="bf-table-score">
                         <div id= "testscore"> 
