Sorting for results table

--- a/client/templates/views/table/user-results-table.html
+++ b/client/templates/views/table/user-results-table.html
@@ -4,14 +4,14 @@
                 <tr>
                     <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">Pos</th>
                     <th data-class="bf-table-team" data-sort-ignore="true">Kasutaja</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">I</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">II</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">III</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">IV</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">V</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VI</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VII</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">Kokku</th>
+                    <th data-class="bf-table-points" class="bf-center">I</th>
+                    <th data-class="bf-table-points" class="bf-center">II</th>
+                    <th data-class="bf-table-points" class="bf-center">III</th>
+                    <th data-class="bf-table-points" class="bf-center">IV</th>
+                    <th data-class="bf-table-points" class="bf-center">V</th>
+                    <th data-class="bf-table-points" class="bf-center">VI</th>
+                    <th data-class="bf-table-points" class="bf-center">VII</th>
+                    <th data-class="bf-table-points" class="bf-center">Kokku</th>
                 </tr>
             </thead>
             <tbody id="pred-body">
