--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -43,7 +43,7 @@
                     {{/if}}
                 </div>
                 <br>
-                {{{getTicker}}}
+                <!--{{{getTicker}}}-->
             </div>
             {{/if}}
             
